--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 </head>
 <body>
   <header>
-    <img class="logo" src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/logo.jpg" alt="Resolution Tech Logo"/>
+    <img class="logo" src="https://github.com/Resolutiontechconstructions/Tech/blob/main/images/logo_Cropped.jpg"/>
     <nav>
       <a href="#services">Services</a>
       <a href="#advantage">AI Advantage</a>
