--- a/index.html
+++ b/index.html
@@ -21,24 +21,22 @@
 
     header {
       display: flex;
-      flex-direction: column;
+      justify-content: space-between;
       align-items: center;
-      justify-content: center;
       padding: 1rem 2rem;
       border-bottom: 1px solid #ddd;
+      max-width: 1200px;
+      margin: auto;
     }
 
     .logo {
       width: 120px;
-      margin-bottom: 0.5rem;
     }
 
     nav {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
       gap: 2rem;
-      margin-top: 0.5rem;
     }
 
     nav a {
@@ -242,16 +240,4 @@
       <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png"><div class="service-description"><h3>Building Facade Assessment and Repair</h3><p>Exterior walls and façade systems are assessed and repaired to address cracks, displacement, and safety risks.</p></div></div>
       <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png"><div class="service-description"><h3>Moisture Intrusion and Envelope Diagnostics</h3><p>Water intrusion points are detected using testing methods, with tailored repair strategies developed accordingly.</p></div></div>
       <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png"><div class="service-description"><h3>Roofing and Flashing Services</h3><p>Roof conditions are evaluated and repaired or newly designed to ensure protection from weather and moisture.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/MEP.png"><div class="service-description"><h3>Building Envelope CAD and Design Detailing</h3><p>Highly detailed CAD drawings illustrate key components of the exterior envelope for accurate repair or new construction.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Civil%20engineering.png"><div class="service-description"><h3>Envelope Construction Administration</h3><p>Façade and roof repair projects are overseen to maintain quality, schedule, and material compliance.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png"><div class="service-description"><h3>Discipline Specific CAD Support</h3><p>Professionally drafted technical drawings support all trades—structure, architecture, MEP, electrical, plumbing, and site work.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png"><div class="service-description"><h3>Subscription Based Structural Support</h3><p>Ongoing structural consultation and document support provided through an affordable, monthly plan enhanced by AI.</p></div></div>
-      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png"><div class="service-description"><h3>Additional Services</h3><p>Covers a wide range of construction-related support beyond the listed categories—tailored solutions for unique project needs.</p></div></div>
-    </div>
-  </section>
-
-  <footer>
-    &copy; 2025 Resolution Tech Constructions. All rights reserved.
-  </footer>
-</body>
-</html>
+      <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions
