--- a/index.html
+++ b/index.html
@@ -29,8 +29,23 @@
       margin: auto;
     }
 
+    .logo-container {
+      display: flex;
+      align-items: center;
+      gap: 0.75rem;
+    }
+
     .logo {
-      width: 120px;
+      width: 60px;
+      height: auto;
+    }
+
+    .site-title {
+      font-family: 'Playfair Display', serif;
+      font-weight: 700;
+      font-size: 1.2rem;
+      color: #004080;
+      white-space: nowrap;
     }
 
     nav {
@@ -184,7 +199,10 @@
 </head>
 <body>
   <header>
-    <img class="logo" src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/logo_Cropped.jpg" alt="Resolution Tech Logo"/>
+    <div class="logo-container">
+      <img class="logo" src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/logo_Cropped.jpg" alt="Resolution Tech Logo"/>
+      <div class="site-title">Resolution Tech Constructions</div>
+    </div>
     <nav>
       <a href="#services">Services</a>
       <a href="#advantage">AI Advantage</a>
@@ -193,6 +211,8 @@
       <a href="#locations">Our Locations</a>
     </nav>
   </header>
+
+  <!-- The rest of your code remains the same (video section, services, etc.) -->
 
   <section class="video-section">
     <video autoplay muted loop playsinline class="background-video">
