--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       color: #111;
       line-height: 1.6;
     }
-
-    header {
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -35,49 +34,48 @@
   flex-shrink: 0;
 }
 
+.logo {
+  width: 160px; /* doubled size */
+  height: auto;
+}
 
-    .logo {
-      width: 80px;
-      height: auto;
-    }
+.site-title {
+  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+  font-size: 1.4rem;
+  color: #004080;
+  white-space: nowrap;
+  padding-bottom: 0.2rem;
+}
 
-    .site-title {
-      font-family: 'Playfair Display', serif;
-      font-weight: 700;
-      font-size: 1.4rem;
-      color: #004080;
-      white-space: nowrap;
-      padding-bottom: 0.2rem;
-    }
+.header-center {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  flex: 1;
+}
 
-    .header-center {
-      display: flex;
-      gap: 2rem;
-      justify-content: center;
-      flex: 1;
-    }
+.header-right {
+  display: flex;
+  gap: 1.2rem;
+  align-items: center;
+}
 
-    .header-right {
-      display: flex;
-      gap: 1.2rem;
-      align-items: center;
-    }
+.search-icon {
+  font-size: 1.2rem;
+  cursor: pointer;
+  color: #333;
+}
 
-    .search-icon {
-      font-size: 1.2rem;
-      cursor: pointer;
-      color: #333;
-    }
-
-    .request-button {
-      background-color: #6A3B0B;
-      color: white;
-      padding: 0.6rem 1.2rem;
-      border: none;
-      border-radius: 5px;
-      font-weight: 600;
-      cursor: pointer;
-    }
+.request-button {
+  background-color: #6A3B0B;
+  color: white;
+  padding: 0.6rem 1.2rem;
+  border: none;
+  border-radius: 5px;
+  font-weight: 600;
+  cursor: pointer;
+}
 
     nav a {
       text-decoration: none;
