--- a/index.html
+++ b/index.html
@@ -30,13 +30,8 @@ header {
 .logo-container {
   display: flex;
   align-items: flex-end;
-  gap: 0.75rem;
+  gap: 0.25rem; /* reduced spacing */
   flex-shrink: 0;
-}
-
-.logo {
-  width: 160px; /* doubled size */
-  height: auto;
 }
 
 .site-title {
@@ -46,7 +41,9 @@ header {
   color: #004080;
   white-space: nowrap;
   padding-bottom: 0.2rem;
+  margin-left: -4px; /* NEW: pulls text closer to logo */
 }
+
 
 .header-center {
   display: flex;
