--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ header {
 .logo-container {
   display: flex;
   align-items: flex-end;
-  gap: 0.25rem; /* reduced spacing */
+  gap: 0.75rem;
   flex-shrink: 0;
 }
 
@@ -41,8 +41,8 @@ header {
   color: #004080;
   white-space: nowrap;
   padding-bottom: 0.2rem;
-  margin-left: -4px; /* NEW: pulls text closer to logo */
 }
+
 
 
 .header-center {
