--- a/index.html
+++ b/index.html
@@ -47,10 +47,15 @@ header {
 
 .header-center {
   display: flex;
-  gap: 2rem;
   justify-content: center;
   flex: 1;
 }
+
+.header-center nav {
+  display: flex;
+  gap: 3rem; /* increase this value to spread the menu items more */
+}
+
 
 .header-right {
   display: flex;
