--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@ header {
   gap: 0.75rem;
   flex-shrink: 0;
 }
-
+.logo {
+  width: 40px;
+  height: auto;
+}
 .site-title {
   font-family: 'Playfair Display', serif;
   font-weight: 700;
