--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Resolution Tech Constructions</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     * {
       margin: 0;
@@ -256,7 +257,9 @@ header {
     </nav>
   </div>
  <div class="header-right">
-  <button class="search-icon" title="Search">&#128269;</button>
+ <button class="search-icon" title="Search">
+  <i class="fas fa-search"></i>
+</button>
   <button class="request-button">Request a Proposal</button>
 </div>
   <!-- Keep the rest of your code from here onward unchanged (video, sections, services, footer, etc.) -->
