--- a/index.html
+++ b/index.html
@@ -88,14 +88,10 @@ header {
       font-size: 1rem;
     }
 
-   .video-section {
+.video-section {
   position: relative;
+  width: 100%;
   height: 100vh;
-  width: 100vw; /* NEW */
-  left: 50%;     /* NEW */
-  right: 50%;    /* NEW */
-  margin-left: -50vw;  /* NEW */
-  margin-right: -50vw; /* NEW */
   overflow: hidden;
 }
 
