--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ header {
 <body>
  <header>
   <div class="logo-container">
-    <img class="logo" src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/logo_Cropped.jpg" alt="Resolution Tech Logo"/>
+<img class="logo" src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/LOGO_Edited.name.jpg" alt="Resolution Tech Logo"/>
     <div class="site-title">Resolution Tech Constructions</div>
   </div>
   <div class="header-center">
