--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@ header {
   </section>
 
   <!-- Services Section -->
-  #services h2 {
-  margin-bottom: 2rem; /* Adds space between title and grid */
-}
+<section class="features" id="services">
+  <h2 style="text-align: center">Our Services</h2>
+  <div class="services-grid">
       <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Structural%20engineering%20services.png"><div class="service-description"><h3>Structural Design and Analysis</h3><p>Safe, code-compliant structural systems designed for new buildings or for strengthening existing ones.</p></div></div>
       <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Building%20envelope.png"><div class="service-description"><h3>Restoration and Rehabilitation Engineering</h3><p>Aged, damaged, or deteriorated buildings are evaluated and restored to ensure long-term safety and performance.</p></div></div>
       <div class="service-item"><img src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/Special%20inspections.png"><div class="service-description"><h3>Forensic Engineering and Expert Reports</h3><p>Root causes of building failures are uncovered and documented for insurance, legal, and technical purposes.</p></div></div>
