--- a/index.html
+++ b/index.html
@@ -252,7 +252,10 @@ header {
 .search-icon:hover {
   transform: scale(1.2);
 }
-
+#services h2 {
+  display: block;
+  margin-bottom: 40px; /* Adds 40px space under heading */
+}
   </style>
 </head>
 <body>
