--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ header {
 <body>
  <header>
   <div class="logo-container">
-  <img class="logo" src="https://raw.githubusercontent.com/Resolutiontechconstructions/Tech/main/images/LOGO_Edited.name.jpg" alt="Resolution Tech Logo"/>
+  <img class="logo" src="https://github.com/Resolutiontechconstructions/Tech/blob/main/images/LOGO_Edited.name2.jpg"/>
 </div>
   <div class="header-center">
     <nav>
