--- a/index.html
+++ b/index.html
@@ -96,25 +96,32 @@ header {
       font-size: 1rem;
     }
 
+/* Full-bleed hero video — single source of truth */
 .video-section {
   position: relative;
   height: 100vh;
-  width: 100%;
-  margin: 0;
+  width: 100vw;
+  margin-left: calc(50% - 50vw); /* break out of any page gutters */
+  margin-right: calc(50% - 50vw);
   padding: 0;
   overflow: hidden;
 }
 
-
-
-  .background-video {
+.background-video {
   position: absolute;
-  top: 0;
-  left: 0;
+  inset: 0;          /* top/right/bottom/left: 0 */
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;     /* removes inline-video gap */
   z-index: -1;
+}
+
+/* keep this one, delete the duplicate later in the file */
+html, body {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 
